dsa started